--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#pixelated-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100vh;
+  width: 100%;
+  image-rendering: pixelated;
+  background-color: rgba(0, 0, 0, 1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+#img1 {
+  display: none;
+  /* position: fixed;
+  bottom: 40px;
+  right: 40px;
+  min-height: 300px;
+  border: 2px solid #222; */
+
+  /* display: none; */
+
+  /* object-fit: cover;
+  height: 100vh;
+  width: 100%; */
+}
+
+.points-container {
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  height: 140px;
+  width: 180px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.points {
   color: white;
+  font-size: 3.4rem;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.points span {
+  font-size: 1.6rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0;
 }
+
+
+
+
+
